tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetNestedNamespaces_Exception.fsx

#r "provider_EVIL_PROVIDER_GetNestedNamespaces_Exception.dll"

open FSharp.EvilProviderWhereGetNestedNamespacesRaisesException

